# Duplicate-X-Python

./: .gitignore  README.md  pyproject.toml
src/duplicate_x_folder/: actions.py  cli.py  gui.py  models.py  progress.py  scanner.py
tests/: test_scanner.py
